--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.19.0",
+    "knex": "^0.19.4",
     "morgan": "^1.9.1",
+    "pg": "^7.12.1",
     "xss": "^1.0.6"
   },
   "devDependencies": {
